--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -35,13 +35,16 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
     --bg-inactive: #F0F0F0;
     --bg-accent: #7FA6CB;
     --bg-editor: #F0F0F0;
+    --bg-draggable: rgba(122, 122, 122, 0.39);
+
     --border-inactive: #C9C9C9;
     --border-accent: #316697;
     --border-content: #E4E4E4;
+    --border-draggable: #282828;
+
     --text-dark: #282828;
     --text-light: #FFFFFF;
-
-
+    --text-draggable: #282828;
 }
 
 body {
@@ -69,7 +72,7 @@ content {
 }
 
 .content_hidden {
-    display: none;
+    display: none !important;
 }
 
 #blocklyDiv {
@@ -86,6 +89,7 @@ content {
 }
 
 .switch__item {
+    transition: all 0.1s;
     font-size: 1.05em;
     cursor: pointer;
     display: flex;
