--- a/frontend/css/interface.css
+++ b/frontend/css/interface.css
@@ -11,12 +11,14 @@
 }
 
 .content-interface__field {
+    position: relative;
     height: 100%;
     background: var(--bg-editor);
     width: 100%;
 }
 
 .sidebar__item {
+    user-select: none;
     border-bottom: 1px solid var(--border-content);
     height: 40px;
     display: flex;
@@ -37,7 +39,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+    user-select: none;
+    position: absolute;
     top: 10px;
     left: 10px;
     width: 150px;
