--- a/frontend/css/interface.css
+++ b/frontend/css/interface.css
@@ -7,6 +7,9 @@
     border-right: 1px solid var(--border-content);
     height: 100%;
     width: 180px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     flex-shrink: 0;
 }
 
@@ -15,6 +18,7 @@
     height: 100%;
     background: var(--bg-editor);
     width: 100%;
+    overflow: hidden;
 }
 
 .sidebar__item {
@@ -47,6 +51,8 @@
     background: var(--bg-draggable);
     z-index: 999;
     overflow: hidden;
+    min-width: 25px;
+    min-height: 25px;
 }
 
 .field__elem_selected {
@@ -60,4 +66,64 @@
     right: 4px;
     bottom: 2px;
 }
+
+.sidebar__menu {
+    user-select: none;
+    border-top: 1px solid var(--border-content);
+    margin-bottom: 10px;
+}
+
+.sidebar__menu_hidden {
+    display: none;
+}
+
+.sidebar__menu > div {
+    font-size: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    height: 35px;
+    border-bottom: 1px solid var(--border-content);
+    font-family: sans-serif;
+}
+
+.sidebar__menu > div:last-child {
+    border-bottom: none !important;
+}
+
+.menu__input > input {
+    width: 70px;
+    height: 25px;
+    background: var(--bg-editor);
+    border-bottom: 2px solid var(--border-inacive);
+    box-sizing: border-box;
+    padding: 0 8px;
+}
+
+.menu__buttons {
+    padding: 10px 10px 0 !important;
+    box-sizing: content-box !important;
+    justify-content: center !important;
+    grid-gap: 10px;
+}
+
+.menu__buttons > .button {
+    flex-grow: 1;
+}
+
+.menu__input > label {
+    font-size: 15px !important;
+}
+
+.menu-input {
+    font-size: 15px;
+}
+
+.menu__title {
+    font-weight: bold;
+    justify-content: center !important;
+}
+
+
 
