--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -4,8 +4,8 @@
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-    font-family: arial;
-    font-size: 15px;
+    font-family: sans-serif;
+    font-size: 16px;
     color: var(--text-dark);
 }
 html,body{
@@ -17,6 +17,8 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+    font-family: sans-serif;
+    font-size: 17px;
 }
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
