--- a/frontend/css/logic.css
+++ b/frontend/css/logic.css
@@ -65,8 +65,8 @@
 }
 
 .show-js-btn {
-    margin: 0 10px 15px;
-    height: 30px;
+    margin: 0 10px 10px;
+    height: 35px;
 }
 
 .js-code-block {
@@ -74,7 +74,8 @@
     transition: all 0.2s;
     margin-left: 180px;
     z-index: 69;
-    background: #D9D9D9;
+    /* background: #D9D9D9; */
+    background: var(--bg-light);
     width: 100%;
     height: 100%;
     padding: 20px;
@@ -87,7 +88,7 @@
 
 .js-code-block__title {
     font-size: 1.5em;
-    color: #606060;
+    color: var(--text-dark);
     margin-bottom: 20px;
 }
 
