bullsh*t refactoring pt.1

--- a/frontend/css/popup.css
+++ b/frontend/css/popup.css
@@ -24,7 +24,7 @@
 
 .prompt__title, .alert__title {
     font-size: 1.5em;
-    margin-bottom: 20px;;
+    margin-bottom: 20px;
 } 
 
 .prompt__input {
