--- a/frontend/css/logic.css
+++ b/frontend/css/logic.css
@@ -1,98 +1,99 @@
+body::-webkit-scrollbar {
+	width: 0;
+}
 
 #blocklyDiv {
-    height: 100%;
+	height: 100%;
+	max-width: 100vw;
 }
 
 .blocklyMainBackground {
-    stroke-width: 0;
-}
-
-.blocklySvg {
-    background: var(--bg-editor);
-}
-
-.blocklyToolboxDiv {
-    width: 180px;
-    margin: 0;
-    padding: 0;
-    background: var(--bg-light);
-    border-right: 1px solid var(--border-content);
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.blocklyToolboxCategory {
-    height: 40px;
-    position: relative;
-}
-
-.blocklyTreeRow {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    border-left-width: 0 !important;
-    border-bottom: 1px solid var(--border-content);
-}
-
-.blocklyTreeRowContentContainer {
-    display: flex;
-    align-items: center;
-    color: var(--text-dark);
-}
-
-.blocklyTreeDot {
-    display: inline-block;
-    background: #000;
-    width: 11px;
-    height: 11px;
-    border-radius: 50%;
-    margin-right: 8px;
-}
-
-.blocklyFlyoutBackground {
-    fill: var(--bg-light)
+	stroke-width: 0;
 }
 
 .injectionDiv {
-    overflow: visible;
-    display: flex;
-    position: relative;
+	overflow: visible;
+	display: flex;
+	position: relative;
+}
+
+.blocklySvg {
+	background: var(--bg-editor);
+}
+
+.blocklyToolboxDiv {
+	width: 180px;
+	margin: 0;
+	padding: 0;
+	background: var(--bg-light);
+	border-right: 1px solid var(--border-content);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.blocklyToolboxCategory {
+	height: 40px;
+	position: relative;
+}
+
+.blocklyTreeRow {
+	display: flex;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	border-left-width: 0 !important;
+	border-bottom: 1px solid var(--border-content);
+}
+
+.blocklyTreeRowContentContainer {
+	display: flex;
+	align-items: center;
+	color: var(--text-dark);
+}
+
+.blocklyTreeDot {
+	display: inline-block;
+	background: #000;
+	width: 11px;
+	height: 11px;
+	border-radius: 50%;
+	margin-right: 8px;
+}
+
+.blocklyFlyoutBackground {
+	fill: var(--bg-light);
 }
 
 .show-js-btn {
-    margin: 0 10px 10px;
-    height: 35px;
+	margin: 0 10px 10px;
+	height: 35px;
 }
 
 .js-code-block {
-    transform: translateX(0);
-    transition: all 0.2s;
-    margin-left: 180px;
-    z-index: 69;
-    /* background: #D9D9D9; */
-    background: var(--bg-light);
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    color: #606060;
+	transform: translateX(0);
+	transition: all 0.2s;
+	margin-left: 180px;
+	z-index: 69;
+	background: var(--bg-light);
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	color: #606060;
 }
 
 .js-code-block__generated-code {
-    color: #606060;
+	color: #606060;
 }
 
 .js-code-block__title {
-    font-size: 1.5em;
-    color: var(--text-dark);
-    margin-bottom: 20px;
+	font-size: 1.5em;
+	color: var(--text-dark);
+	margin-bottom: 20px;
 }
 
 .js-code-block_hidden {
-    transform: translateX(-150%);
+	transform: translateX(-150%);
 }
-
