Fixed post requests

--- a/ros_learning/AdminCatalog/templates/Courses/courses.html
+++ b/ros_learning/AdminCatalog/templates/Courses/courses.html
@@ -24,12 +24,20 @@
     <div><button id="delete"> Удалить </button></div>
 </div>
 {% endfor %}
+ {% csrf_token %}
 <script>
     const button = document.getElementById('post-btn');
+    const csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value;
+    const name = document.getElementById('name-inpt');
+    console.log(csrf_token);
     button.addEventListener('click', async _ => {
       try {
         const response = await fetch('createCourse', {
           method: 'post',
+          headers: {'X-CSRFToken': csrf_token},
+          body: JSON.stringify({
+            'name': name.value
+          })
         });
         console.log('Completed!', response);
       } catch(err) {
