--- a/ros_learning/AdminCatalog/templates/Courses/courses.html
+++ b/ros_learning/AdminCatalog/templates/Courses/courses.html
@@ -7,29 +7,49 @@
 <body>
 <h1>Курсы</h1>
 <div>
-    <input type="text" id="name-inpt">
-    <button id="post-btn">Добавить</button>
+    <input type="text" id="course-name-input">
+    <button id="add-course-btn">Добавить курс</button>
 </div>
 <div>
     <a href="">Персонал</a>
 </div>
 {% for m in courses %}
 <div>
-    <div><p>{{ m.name }}</p></div>
-    <div><a href="{{ m.get_url }}"> Управление </a></div>
-    <div><button id="delete"> Удалить </button></div>
+    <div>
+        <p>{{ m.name }}</p></div>
+    <div>
+        <a href="{{ m.get_url }}"> Управление </a></div>
+        <div>
+            <button id="course_delete"> Удалить </button>
+        </div>
+    </div>
 </div>
 {% endfor %}
  {% csrf_token %}
 <script>
-    const button = document.getElementById('post-btn');
+    const add_course_button = document.getElementById('add-course-btn');
     const csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value;
-    const name = document.getElementById('name-inpt');
+    const course_name = document.getElementById('course-name-input');
     console.log(csrf_token);
-    button.addEventListener('click', async _ => {
+    add_course_button.addEventListener('click', async _ => {
       try {
-        const response = await fetch('createCourse', {
+        const response = await fetch('', {
           method: 'post',
+          headers: {'X-CSRFToken': csrf_token},
+          body: JSON.stringify({
+            'name': course_name.value
+          })
+        });
+        console.log('Completed!', response);
+      } catch(err) {
+        console.error(`Error: ${err}`);
+      }
+    });
+    const del_course_button = document.getElementById('course_delete');
+    del_course_button.addEventListener('click', async _ => {
+      try {
+        const response = await fetch('', {
+          method: 'delete',
           headers: {'X-CSRFToken': csrf_token},
           body: JSON.stringify({
             'name': name.value
