--- a/ros_learning/AdminCatalog/templates/Lessons/lessons.html
+++ b/ros_learning/AdminCatalog/templates/Lessons/lessons.html
@@ -2,18 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Управление курсом</title>
+    <title>Управление уроком</title>
 </head>
 <body>
-<h1>Управление курсом</h1>
+<h1>Управление уроком</h1>
 <form>
     <a href="/catalog/admin-catalog/courses/">Назад</a>
 </form>
 <div>
-    <p>Название курса</p>
+    <p>Название Урока</p>
 </div>
 <div>
-    <button>Создать урок</button>
+    <input type="text" id="lesson-name-input">
+    <button id="add-lesson-btn">Добавить урок</button>
 </div>
 <div>
     <a href="">Персонал</a>
@@ -21,8 +22,49 @@
 {% for m in lessons %}
 <div>
     <p>{{ m.name }}</p>
-    <div><a href="{{ m.get_url }}"> Управление </a><button> Удалить </button></div>
+    <div>
+        <a href="{{ m.get_url }}"> Управление </a>
+        <div>
+            <button id="lesson_delete"> Удалить </button>
+        </div>
+    </div>
 </div>
 {% endfor %}
+{% csrf_token %}
+<script>
+    const add_lesson_button = document.getElementById('add-lesson-btn');
+    const csrf_token = document.getElementsByName('csrfmiddlewaretoken')[0].value;
+    const lesson_name = document.getElementById('lesson-name-input');
+    console.log(csrf_token);
+    add_lesson_button.addEventListener('click', async _ => {
+      try {
+        const response = await fetch('lessons', {
+          method: 'post',
+          headers: {'X-CSRFToken': csrf_token},
+          body: JSON.stringify({
+            'name': lesson_name.value
+          })
+        });
+        console.log('Completed!', response);
+      } catch(err) {
+        console.error(`Error: ${err}`);
+      }
+    });
+    const del_lesson_button = document.getElementById('lesson_delete');
+    del_lesson_button.addEventListener('click', async _ => {
+      try {
+        const response = await fetch('', {
+          method: 'delete',
+          headers: {'X-CSRFToken': csrf_token},
+          body: JSON.stringify({
+            'name': name.value
+          })
+        });
+        console.log('Completed!', response);
+      } catch(err) {
+        console.error(`Error: ${err}`);
+      }
+    });
+</script>
 </body>
 </html>
