Chande courses.css

--- a/ros_learning/Core/templates/Courses/courses.html
+++ b/ros_learning/Core/templates/Courses/courses.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <title>Список курсов</title>
     <link rel="stylesheet" href="{% static 'css/courses.css' %}">
+
 </head>
 <body>
-<div class="courses"><p>Список курсов{% static 'css/courses.css' %}</p>
+<div class="courses"><p>Список курсов</p>
 </div>
 <ul id="ul">
     {% for m in courses %}
