--- a/ros_learning/Core/templates/Tasks/tasks.html
+++ b/ros_learning/Core/templates/Tasks/tasks.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Задания</title>
+        <link rel="stylesheet" href="{% static 'css/courses.css' %}">
+
 </head>
 <body>
 <div class="lessons">
@@ -15,11 +17,20 @@
     <li>
         <div class="card">
             <h2>{{ m.name }}</h2>
-            <a class="tasks-button" href="{{m.get_url}}">Пройти</a>
+            <a class="course" href="{{m.get_url}}">Пройти</a>
             <p></p>
         </div>
     </li>
     {% endfor %}
 </ul>
+<div class="back">
+    <p>Вернуться к урокам</p>
+    <button class="course" onclick="goBack()">Назад</button>
+</div>
 </body>
+<script>
+    function goBack() {
+        window.history.back();
+    }
+</script>
 </html>
