--- a/ros_learning/Core/templates/Lessons/lessons.html
+++ b/ros_learning/Core/templates/Lessons/lessons.html
@@ -5,15 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Уроки</title>
-    <link rel="stylesheet" href="{% static 'css/courses.css' %}">
+    <link rel="stylesheet" href="{% static 'css/lessons.css' %}">
 </head>
 <body>
 <div class="lessons">
-    <p>Уроки</p>
+    <h2>Уроки</h2>
 </div>
-<ul id="ul_top_hypers">
+<ul id="ul">
     {% for m in lessons %}
-    <li>
+    <li id="li">
         <div class="card">
             <h2>{{ m.name }}</h2>
             <a class="course" href="{{m.get_url}}">Пройти</a>
