--- a/ros_learning/Core/templates/Tasks/tasks.html
+++ b/ros_learning/Core/templates/Tasks/tasks.html
@@ -5,14 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Задания</title>
-        <link rel="stylesheet" href="{% static 'css/courses.css' %}">
+        <link rel="stylesheet" href="{% static 'css/tasks.css' %}">
 
 </head>
 <body>
-<div class="lessons">
-    <p>Задания</p>
-</div>
-<ul id="ul_top_hypers">
+<h1>Задания</h1>
+<ul id="ul">
     {% for m in tasks %}
     <li>
         <div class="card">
@@ -20,6 +18,7 @@
             <a class="course" href="{{m.get_url}}">Пройти</a>
             <p></p>
         </div>
+
     </li>
     {% endfor %}
 </ul>
