--- a/ros_learning/static/css/courses.css
+++ b/ros_learning/static/css/courses.css
@@ -1,9 +1,9 @@
 .card {
     background: #DCDCDC;
-    border-radius: 20px;
+    border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     margin: 10px;
-    padding: 20px;
+    padding: 30px;
     width: 65git 0px;
 }
 h2 {
@@ -18,13 +18,17 @@ text-align:center;
     margin: 20px 50px;
     position:relative;
     top:20%;
-    right: -37%;
+    right: -50%;
     border-radius: 5px;
     text-decoration: none;
 }
 
 
-ul{
-display: inline;
-
+#ul{
+display: flex;
+ flex-flow: row wrap;
+}
+#ul li {
+display: flex;
+  flex-flow: row wrap;
 }
